--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root">
+      <img src="https://assets.blu365.com.br/uploads/sites/4/2019/01/consultora-jequiti-cadastro.jpg" alt="JEQUITI">
     </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
